Promissoria completa-faltando ajustes pequenos++

--- a/projeto/emprestimo/templates/emprestimo_promissoria.html
+++ b/projeto/emprestimo/templates/emprestimo_promissoria.html
@@ -81,13 +81,13 @@
         
     }
     .fontmaior{
-        font-size: 26px;
+        font-size: 24px;
         margin-left: 5px;
     }
     .fontmaior1{
-        font-size: 26px;
+        font-size: 24px;
         padding: right;
-        margin: 50px;  
+        margin: 55px;  
     }
     .fontmenor{
         font-size: 17px;
@@ -225,13 +225,13 @@ window.onload = function imprimir(){
         <div class="eit">
             <a class="test1">&nbsp</a>
             <a class="test1">Avalista(s)</a>
-            <a class="test1">________________________ &nbsp&nbsp&nbsp</a>
-            <a class="test1">________________________ &nbsp&nbsp&nbsp</a>
+            <a class="test1">_____________________________ &nbsp&nbsp&nbsp</a>
+            <a class="test1">_____________________________ &nbsp&nbsp&nbsp</a>
             <a class="ait"> 
-                <b class = "fontmaior" >&nbsp&nbsp&nbsp&nbsp&nbspNº</b> <b class="bordinha fontmaior"> &nbsp ${contador_parcela}/${aux_qtd_parccela} &nbsp</b>  
+                <b class = "fontmaior" >&nbspNº</b> <b class="bordinha fontmaior"> &nbsp ${contador_parcela}/${aux_qtd_parccela} &nbsp</b>  
                 <b class="fontmenor"> Vencimento: ${dia} de ${mes} de ${ano} </b> 
                 <b class="fontmaior1">
-                    R$:<b class="bordinha fontmaior1">&nbsp${dinheiro}&nbsp</b> 
+                    <b class="bordinha fontmaior1">R$&nbsp&nbsp${dinheiro}&nbsp</b> 
                 </b>           
                 <br><br> 
                 <p class="fontmenor a">                     
@@ -264,11 +264,8 @@ window.onload = function imprimir(){
                     ASSINATURA DO EMITENTE
                 </p>
                 <br>
-                <a>&nbsp&nbsp&nbsp</a><br>
-                <a>&nbsp&nbsp&nbsp</a><br>
-                <a>&nbsp&nbsp&nbsp</a><br>
-                <a>&nbsp&nbsp&nbsp</a><br>
-                   
+                
+                
                   
             </a> 
            
