Promissoria completa-faltando ajustes pequenos+++

--- a/projeto/emprestimo/templates/emprestimo_promissoria.html
+++ b/projeto/emprestimo/templates/emprestimo_promissoria.html
@@ -45,7 +45,7 @@
     /**/
     p {
         width: 720px; 
-        border: 1px solid black;
+        border:none;
         display: inline-block
     }
     p.a {
@@ -235,9 +235,9 @@ window.onload = function imprimir(){
                 </b>           
                 <br><br> 
                 <p class="fontmenor a">                     
-                    &nbsp&nbsp&nbsp&nbspAo(s) <u>  ${dia} de ${mes} de ${ano} </u> pagar______  &nbsp&nbsp por esta única via de <b> NOTA PROMISSÓRIA</b> 
-                    a JOSIMERIO DE ABREU SILVA &nbsp&nbsp&nbsp CPF/CNPJ 02938827466 ou à sua ordem, a quantia de <u> ${real}</u> 
-                    em moeda corrente deste país, pagável em ESCROTÓRIO NATAL/RN    
+                    &nbsp&nbsp&nbsp&nbspAo(s) <u>  ${dia} de ${mes} de ${ano} </u>&nbsp&nbsp pagar______  &nbsp&nbsp por esta única via de <b> NOTA PROMISSÓRIA</b> 
+                    a JOSIMERIO DE ABREU SILVA &nbsp&nbsp&nbsp CPF/CNPJ 02938827466 ou à sua ordem, a quantia de <u> ${real} reais e ${centavos} centavos</u> 
+                    em moeda corrente deste país, pagável em ESCROTÓRIO NATAL/RN.    
                 </p>   
 
                 <p class="fontmenor b" style="text-align:center">                     
@@ -262,15 +262,9 @@ window.onload = function imprimir(){
                     DATA DE EMISSÃO <br>
                     ___________________________<br>
                     ASSINATURA DO EMITENTE
-                </p>
-                <br>
-                
-                
-                  
+                </p>               
             </a> 
-           
-        </div>
-    
+        </div>    
         `
     }			
 }
