Promissoria exibindo nome correto do emitente

--- a/projeto/emprestimo/templates/emprestimo_detail.html
+++ b/projeto/emprestimo/templates/emprestimo_detail.html
@@ -55,7 +55,13 @@
     
     <td style="text-align:center"> 
         <a href="{% url 'emprestimo:emprestimo_promissoria' object.pk %}" >
-            <button class="button button3">Promissória</button>
+            <button class="button button2">Promissória</button>
+        </a> 
+    </td> 
+
+    <td style="text-align:center"> 
+        <a href="#" >
+            <button class="button button2">Contrato</button>
         </a> 
     </td> 
 </span>
