--- a/projeto/emprestimo/templates/emprestimo_promissoria.html
+++ b/projeto/emprestimo/templates/emprestimo_promissoria.html
@@ -224,7 +224,7 @@ window.onload = function imprimir(){
         `
         <div class="eit">
             <a class="test1">&nbsp</a>
-            <a class="test1">Avalista(s)</a>
+            <a class="test1">&nbsp&nbsp&nbsp&nbspAvalista(s)</a>
             <a class="test1">_____________________________ &nbsp&nbsp&nbsp</a>
             <a class="test1">_____________________________ &nbsp&nbsp&nbsp</a>
             <a class="ait"> 
@@ -243,7 +243,7 @@ window.onload = function imprimir(){
                 <p class="fontmenor b" style="text-align:center">                     
                     <b>
                         <u>  
-                            ${"{{object.cliente}}"} 
+                            ${"{{object.funcionario.first_name}}"} ${"{{object.funcionario.last_name}}"} 
                         </u>
                     </b> 
                     <br>
