Posições da romissoria padronizadas

--- a/projeto/emprestimo/templates/emprestimo_promissoria.html
+++ b/projeto/emprestimo/templates/emprestimo_promissoria.html
@@ -11,38 +11,27 @@
     body {
         font-family: "Arial";
     }
-    
     .document {
         margin: auto auto;
         width: 236mm;
         height: 108mm;
         background-color: #fff;
     }
-    
-
     p.solid {
         border-style: solid;
     }
-
     p.test1 {
         writing-mode: vertical-lr; 
         transform: rotate(180deg);
         /*transform: scaleY(-1);*/
         /*float: top;*/
-       
     }
-
     a.test1 {
         writing-mode: vertical-lr; 
         transform: rotate(180deg);
         /*transform: scaleY(-1);*/
         /*float: top;*/
-       
     }
-
-
-
-    /**/
     p {
         width: 720px; 
         border:none;
@@ -51,29 +40,35 @@
     p.a {
         word-break: normal;
     }    
-    p.b {
+    p.emitente {
         word-break: normal;
         width: 320px;
         border: none;
+        left: 20px;
+        top: 165px;
+        position: absolute;
+    }
+    p.emissao {
+        word-break: normal;
+        width: 320px;
+        border: none;
+        left: 360px;
+        top: 165px;
+        position: absolute;
     }
     p.c {
-    word-break: break-all;
+        word-break: break-all;
     }
-    /**/
-
-
     .eit {
         border: 1px solid black;        
         margin-bottom: 10px;  
         background-color: lightblue;
         padding: 5px 0px 20px 0px;
-        
     }
     .ait{               
         margin-top: 10px;
         margin-left: 10px;
         position: absolute;
-        
     }
     .bordinha{
         border: 2px solid black;
@@ -84,16 +79,19 @@
         font-size: 24px;
         margin-left: 5px;
     }
-    .fontmaior1{
+    .fontmaior.valor{
         font-size: 24px;
-        padding: right;
-        margin: 55px;  
+        margin-left: 5px;
+    }
+    .fontmaior1{
+        font-size: 24px;       
+        left: 300px;
+        position: absolute; 
     }
     .fontmenor{
         font-size: 17px;
         padding: 10px; 
-        margin: 8px;   
-        
+        margin: 8px; 
     }
    
 </style>
@@ -219,7 +217,6 @@ window.onload = function imprimir(){
     if(mes == 12){
         mes = 'Dezembro'
     }
-    
     promissoria.innerHTML +=		
         `
         <div class="eit">
@@ -230,7 +227,7 @@ window.onload = function imprimir(){
             <a class="ait"> 
                 <b class = "fontmaior" >&nbspNº</b> <b class="bordinha fontmaior"> &nbsp ${contador_parcela}/${aux_qtd_parccela} &nbsp</b>  
                 <b class="fontmenor"> Vencimento: ${dia} de ${mes} de ${ano} </b> 
-                <b class="fontmaior1">
+                <b class="fontmaior1 ">
                     <b class="bordinha fontmaior1">R$&nbsp&nbsp${dinheiro}&nbsp</b> 
                 </b>           
                 <br><br> 
@@ -240,7 +237,7 @@ window.onload = function imprimir(){
                     em moeda corrente deste país, pagável em ESCROTÓRIO NATAL/RN.    
                 </p>   
 
-                <p class="fontmenor b" style="text-align:center">                     
+                <p class="fontmenor emitente" style="text-align:center">                     
                     <b>
                         <u>  
                             ${"{{object.funcionario.first_name}}"} ${"{{object.funcionario.last_name}}"} 
@@ -252,7 +249,7 @@ window.onload = function imprimir(){
                     ${"{{object.cliente.cpf}}"}  
                 </p>
 
-                <p class="fontmenor b" style="text-align:center">                     
+                <p class="fontmenor emissao" style="text-align:center">                     
                     <b>
                         <u> 
                             &nbsp&nbsp${"{{object.data_emprestimo}}"}&nbsp&nbsp 
@@ -295,35 +292,3 @@ String.prototype.extenso = function(c){
 </script>
 </body>
 </html>
-
-
-
-
-
-<!-- <table cellspacing="0" cellpadding="0" border="1">        
-    <tr>
-        <td width="10%" class="border-right-0">
-            <a class="test1">Avalista(s)</a> 					
-            <a class="test1">________________</a>  
-            <a class="test1">________________</a>  
-        </td>   
-        <td width="85%" colspan="6" >
-            <a></a> <br>
-            <a class="border">
-            &nbsp<b >Nº ${contador_parcela}/${aux_qtd_parccela}</b> &nbsp&nbsp&nbsp&nbspVencimento:&nbsp${dia} de ${mes} de ${ano}&nbsp&nbsp&nbsp&nbsp&nbsp
-            
-            <a class="direita"><b>R$: ${"{{object.valor_prestacao}}"} &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</b></a><a>&nbsp</a><br>
-            <a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbspAo(s) &nbsp${dia} de ${mes} de ${ano} pagarei por esta única via de 
-            <b>NOTA PROMISSÓRIA<br></b>							
-            <a>&nbsp&nbspa JOSIMERIO DE ABREU SILVA CPF/CNPJ 02938827466 OU À SUA ORDEM A QUANTIA <br>&nbsp DE ${real} reais
-            e ${centavos} centavo(s)<br>
-            <a>&nbsp&nbspPagável em ESCRITÓRIO NATAL/RN</a><br>
-            ${"{{object.funcionario}}"}
-        </td>					
-    </tr>
-       
-        
-    
-   
-</table>
-<br> -->
