--- a/projeto/emprestimo/templates/emprestimo_promissoria.html
+++ b/projeto/emprestimo/templates/emprestimo_promissoria.html
@@ -72,20 +72,17 @@
     }
     .bordinha{
         border: 2px solid black;
-        border-radius: 5px;
-        
+        border-radius: 5px;        
     }
     .fontmaior{
         font-size: 24px;
         margin-left: 5px;
-    }
-    .fontmaior.valor{
-        font-size: 24px;
-        margin-left: 5px;
+        top: 0px;
     }
     .fontmaior1{
         font-size: 24px;       
-        left: 300px;
+        left: 600px;
+        top: -1px;
         position: absolute; 
     }
     .fontmenor{
@@ -225,9 +222,12 @@ window.onload = function imprimir(){
             <a class="test1">_____________________________ &nbsp&nbsp&nbsp</a>
             <a class="test1">_____________________________ &nbsp&nbsp&nbsp</a>
             <a class="ait"> 
-                <b class = "fontmaior" >&nbspNº</b> <b class="bordinha fontmaior"> &nbsp ${contador_parcela}/${aux_qtd_parccela} &nbsp</b>  
+                <b class = "fontmaior" >&nbspNº</b>                 
+                <b class="bordinha fontmaior">&nbsp&nbsp${contador_parcela}/${aux_qtd_parccela}&nbsp&nbsp</b>  
+
                 <b class="fontmenor"> Vencimento: ${dia} de ${mes} de ${ano} </b> 
-                <b class="fontmaior1 ">
+
+                <b>
                     <b class="bordinha fontmaior1">R$&nbsp&nbsp${dinheiro}&nbsp</b> 
                 </b>           
                 <br><br> 
