Posições da romissoria padronizadas/texto justificado

--- a/projeto/emprestimo/templates/emprestimo_promissoria.html
+++ b/projeto/emprestimo/templates/emprestimo_promissoria.html
@@ -231,8 +231,8 @@ window.onload = function imprimir(){
                     <b class="bordinha fontmaior1">R$&nbsp&nbsp${dinheiro}&nbsp</b> 
                 </b>           
                 <br><br> 
-                <p class="fontmenor a">                     
-                    &nbsp&nbsp&nbsp&nbspAo(s) <u>  ${dia} de ${mes} de ${ano} </u>&nbsp&nbsp pagar______  &nbsp&nbsp por esta única via de <b> NOTA PROMISSÓRIA</b> 
+                <p class="fontmenor a" align="Justify">                     
+                    &nbsp&nbsp&nbsp&nbsp Ao(s) <u>  ${dia} de ${mes} de ${ano} </u>&nbsp&nbsp pagar______  &nbsp&nbsp por esta única via de <b> NOTA PROMISSÓRIA</b> 
                     a JOSIMERIO DE ABREU SILVA &nbsp&nbsp&nbsp CPF/CNPJ 02938827466 ou à sua ordem, a quantia de <u> ${real} reais e ${centavos} centavos</u> 
                     em moeda corrente deste país, pagável em ESCROTÓRIO NATAL/RN.    
                 </p>   
