--- a/projeto/cliente/templates/cliente_form.html
+++ b/projeto/cliente/templates/cliente_form.html
@@ -109,7 +109,13 @@
                 </div>
             {% endif %}
 
-            <div class="col-sm-4">
+            <div class="col-sm-2">
+                <div class="form-group">
+                    <label for="">{{form.estado_civil.label}}</label>
+                    {% render_field form.estado_civil class="form-control" %}
+                </div>  
+            </div>
+            <div class="col-sm-2">
                 <div class="form-group">
                     <label for="">{{form.naturalidade.label}}</label>
                     {% render_field form.naturalidade class="form-control" %}
