--- a/projeto/emprestimo/templates/emprestimo_promissoria.html
+++ b/projeto/emprestimo/templates/emprestimo_promissoria.html
@@ -7,10 +7,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     
-    <style>
-    body {
-        font-family: "Arial";
-    }
+    <style>    
     .document {
         margin: auto auto;
         width: 236mm;
@@ -59,11 +56,12 @@
     p.c {
         word-break: break-all;
     }
-    .eit {
+    .body {
         border: 1px solid black;        
         margin-bottom: 10px;  
         background-color: lightblue;
         padding: 5px 0px 20px 0px;
+        font-family: "Arial";
     }
     .ait{               
         margin-top: 10px;
@@ -216,7 +214,7 @@ window.onload = function imprimir(){
     }
     promissoria.innerHTML +=		
         `
-        <div class="eit">
+        <div class="body">
             <a class="test1">&nbsp</a>
             <a class="test1">&nbsp&nbsp&nbsp&nbspAvalista(s)</a>
             <a class="test1">_____________________________ &nbsp&nbsp&nbsp</a>
