--- a/projeto/emprestimo/templates/emprestimo_contrato.html
+++ b/projeto/emprestimo/templates/emprestimo_contrato.html
@@ -247,6 +247,13 @@ window.onload = function imprimir(){
                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp DEVEDOR
             </p>
+            <p class="fontmenor">
+                <b>FIADOR 1:</b> - ${"{{object.cliente.avalista.avalista}}"}
+                (${"{{object.cliente.avalista.estado_civil_avalista}}"}, Funcionário Privado, RG ${"{{object.cliente.avalista.rg_avalista}}"} 
+                ${"{{object.cliente.avalista.orgao_expedidor_avalista}}"}, CPF ${"{{object.cliente.avalista.cpf_avalista}}"}, 
+                ${"{{object.cliente.avalista.rua}}"}, ${"{{object.cliente.avalista.numero_casa}}"}, ${"{{object.cliente.avalista.bairro}}"}, 
+                ${"{{object.cliente.avalista.cidade}}"} ${"{{object.cliente.avalista.uf}}"}
+            </p>
            
 
         </p>
