--- a/projeto/emprestimo/templates/emprestimo_contrato.html
+++ b/projeto/emprestimo/templates/emprestimo_contrato.html
@@ -223,7 +223,7 @@ window.onload = function imprimir(){
                 consumerista.
             </p>
             <p class="fontmenor">
-                <b>CLÁUSULA 4ª</b> - O(s) <b>FIADOR(ES)</b> na qualidade de devedor (s) principal e solidário, também presente neste ato e 
+                <b>CLÁUSULA 4ª</b> - O(s) <b>FIADOR(ES)</b> na qualidade de devedor(es) principal e solidário, também presente neste ato e 
                 ao final qualificado e assinado, se compromete a honrar o presente contrato em seu inteiro teor, substituindo o <b>DEVEDOR</b>
                 em todas as obrigações contratuais assumidas, inclusive o pagamento pontual do principal, bem como os demais ônus enxertados 
                 neste contrato, quer decorrentes de acréscimos legais, quer de despesas judiciais se sujeitando aos ditames dos arts. 818 a 826, CC/02.
