Assinatura do fiador e data acrescentados ao contrato

--- a/projeto/emprestimo/templates/emprestimo_contrato.html
+++ b/projeto/emprestimo/templates/emprestimo_contrato.html
@@ -253,6 +253,14 @@ window.onload = function imprimir(){
                 ${"{{object.cliente.avalista.rua}}"}, ${"{{object.cliente.avalista.numero_casa}}"}, ${"{{object.cliente.avalista.bairro}}"}, 
                 ${"{{object.cliente.avalista.cidade}}"} ${"{{object.cliente.avalista.uf}}"}
             </p>
+
+            <p style="text-align:center">
+                ____________________________________________________________<br>
+                ASSINATURA DO FIADOR
+            </p>
+            <p style="text-align:right">
+                Natal, ${dataEmprestimo}              
+            </p>
            
 
         </p>
