--- a/projeto/emprestimo/templates/emprestimo_contrato.html
+++ b/projeto/emprestimo/templates/emprestimo_contrato.html
@@ -8,18 +8,13 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     
     <!-- CSS para impressão -->
-    <link rel="stylesheet" type="text/css" href="/print.css" media="print" />
+    <!-- <link rel="stylesheet" type="text/css" href="/print.css" media="print" /> -->
    
 <style>
     body {
         font-family: "Arial";      
     }
-    .tabela{
-        border: 1px solid black;        
-        margin-bottom: 10px;  
-        background-color: lightblue;        
-        font-family: "Arial";
-    }
+    
     .document {
         margin: auto auto;
         width: 236mm;
@@ -50,9 +45,6 @@
         margin-left: 90px;
     } 
     /*CSS para impressão*/
-    @media print {
-        
-    }
     
     body {
         margin:0;
@@ -80,7 +72,7 @@
 window.onload = function imprimir(){
 
     //VARIÁVEIS DO FUNCIONÁRIO
-    var funcionario = "{{object.funcionario}}"
+    //var funcionario = "{{object.funcionario}}"
     
     //VARIÁVEIS DA DATA DO EMPRESTIMO
     var contador_meses = 0
@@ -155,20 +147,20 @@ window.onload = function imprimir(){
         </p>
 
         <p class="fontmenor">
-        <b>CLÁUSULA 2ª</b> - Que a quantia acima emprestada, parcelada, deverá ser adimplida ao CREDOR no dia,
+        <b>CLÁUSULA 2ª</b> - Que a quantia acima emprestada, parcelada, deverá ser adimplida ao CREDOR no dia de acordo com tabela abaixo:
         </p>
     `
     +
     `
     <table cellspacing="0" cellpadding="0" border="1">       
         <tr>
-            <td width="33%" >
+            <td width="33%">
                 <p class="content "><b>PARCELAS</b></p>	
             </td>
             <td width="33%">
                 <p class="content "><b>VENCIMENTO</b></p>	
             </td>
-            <td width="39%" >
+            <td width="39%">
                 <p class="content "><b>VALOR</b></p>
             </td>						
         </tr>
@@ -194,20 +186,19 @@ window.onload = function imprimir(){
         }
     contrato.innerHTML +=
     `
-    <table cellspacing="0" cellpadding="0" border="1">       
-        <tr>
-            <td width="33%" >
-                <p class="content "><b>${contador_parcela}/${aux_qtd_parccela}</b></p>
-            </td>
-            <td width="33%">
-                <p class="content right text">${dia}/${mes}/${ano}&nbsp</p>
-            </td>
-            <td width="39%" >
-                <p class="content right text">R$ ${"{{object.valor_prestacao}}"}&nbsp</p>
-                
-            </td>						
-        </tr>
-    </table>
+        <table cellspacing="0" cellpadding="0" border="1">       
+            <tr>
+                <td width="33%" >
+                    <p><b>${contador_parcela}/${aux_qtd_parccela}</b></p>
+                </td>
+                <td width="33%">
+                    <p><b>${dia}/${mes}/${ano}&nbsp</b></p>
+                </td>
+                <td width="39%" >
+                    <p><b>R$ ${"{{object.valor_prestacao}}"}&nbsp</b></p>
+                </td>						
+            </tr>
+        </table>
     `
     }
     contrato.innerHTML +=
@@ -261,8 +252,6 @@ window.onload = function imprimir(){
             <p style="text-align:right">
                 Natal, ${dataEmprestimo}              
             </p>
-           
-
         </p>
        
     `
